stylized filter and popup-buy

--- a/css/style.css
+++ b/css/style.css
@@ -1846,6 +1846,202 @@ a {
   margin-right: 20px;
 }
 
+.filters-product__price {
+  display: block;
+  margin-bottom: 15px;
+  padding: 9px 9px 9px 19px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 1.4;
+  text-transform: uppercase;
+  background-color: #f7f3ec;
+  border-radius: 3px;
+}
+
+.filters-product__price-group {
+  margin: 0;
+  margin-bottom: 26px;
+  padding: 0;
+  border: none;
+}
+
+.filters-product__price-title {
+  margin-bottom: 15px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 17px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.price-slider {
+  margin-bottom: 7px;
+  width: 100%;
+  padding: 40px 20px;
+  background-color: #f7f3ec;
+  border-radius: 3px;
+}
+
+.price-slider__line {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background-color: #d7dcde;
+}
+
+.price-slider__line-fill {
+  width: 90%;
+  height: 2px;
+  background-color: #00ca74;
+}
+
+.price-slider__control {
+  position: absolute;
+  top: 50%;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.3);
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  cursor: pointer;
+  outline: none;
+}
+
+.price-slider__control::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  content: "";
+  background-color: #ababab;
+  border-radius: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.price-slider__control-min {
+  left: 0;
+}
+
+.price-slider__control-max {
+  right: 10%;
+}
+
+.filters-product__price-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: space-between;
+  height: 38px;
+}
+
+.filters-product__price-input {
+  width: 95px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 17px;
+  text-align: center;
+  background-color: #f7f3ec;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+}
+
+.filters-product__choice {
+  display: none;
+}
+
+.separator {
+  width: 100%;
+  height: 1px;
+  background-color: #e5e5e5;
+  border: none;
+}
+
+.filters-product__group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  padding: 0;
+  border: none;
+}
+
+.filters-product__group :last-child {
+  margin-bottom: 11px;
+}
+
+.filters-product__group-title {
+  margin-bottom: 15px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 17px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.filters-product__manufacturers,
+.filters-product__type {
+  position: relative;
+  margin-bottom: 18px;
+  padding-left: 35px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 15px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.filters-product__manufacturers::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 27px;
+  height: 23px;
+  content: "";
+  background-image: url("../img/icons/checkbox-off.svg");
+  background-repeat: no-repeat;
+  opacity: 0.3;
+}
+
+.filters-product__choice:checked + .filters-product__manufacturers::before {
+  background-image: url("../img/icons/checkbox-on.svg");
+}
+
+.filters-product__type::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  content: "";
+  background-image: url("../img/icons/radio-off.svg");
+  background-repeat: no-repeat;
+  opacity: 0.3;
+}
+
+.filters-product__choice:checked + .filters-product__type::before {
+  background-image: url("../img/icons/radio-on.svg");
+}
+
+.filters-product__show {
+  margin-top: 62px;
+  padding: 11px 38px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  background-color: #ffffff;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
 .catalog-product {
   width: 700px;
 }
@@ -1953,4 +2149,100 @@ a {
 .sorting__link_active {
   color: #ee3643;
   border-bottom: none;
+}
+
+.popup-order {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  z-index: 996;
+  display: none;
+  width: 620px;
+  height: 282px;
+  background-color: #ffffff;
+  border-top: 7px solid #ee3643;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
+}
+
+.popup-order__close {
+  position: absolute;
+  top: 13px;
+  right: 10px;
+  z-index: 997;
+  width: 21px;
+  height: 21px;
+  background-image: url("../img/icons/close-form.svg");
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.wrapper-popup-order__title {
+  padding: 50px 124px 68px 178px;
+}
+
+.popup-order__title {
+  position: relative;
+  margin: 0;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+.popup-order__title::before {
+  position: absolute;
+  top: -10px;
+  left: -90px;;
+  width: 66px;
+  height: 66px;
+  content: "";
+  background-image: url("../img/icons/success.svg");
+  background-repeat: no-repeat;
+}
+
+.wrapper-popup-order__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 112px;
+  background-color: #f1f1f1;
+}
+
+.popup-order__link {
+  display: block;
+  width: 220px;
+  margin: 0px 20px;
+  padding: 9px 0px;
+  font-size: 14px;
+  color: #000000;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #ffffff;
+  border-radius: 3px;
+  outline: none;
+}
+
+.popup-modal__order_red {
+  color: #ffffff;
+  background-color: #ee3643;
+}
+
+.popup-modal__order_red:hover,
+.popup-modal__order_red:focus {
+  background-color: #ca2c37;
+}
+
+.popup-modal__order_red:active {
+  background-color: #ba2732;
+}
+
+.popup-order_display {
+  display: block;
 }
