fix color paga-link

--- a/css/style.css
+++ b/css/style.css
@@ -2283,6 +2283,7 @@ a {
   margin-right: 10px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
+  color: #000000;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
 }
