--- a/css/style.css
+++ b/css/style.css
@@ -2235,8 +2235,9 @@ a {
   display: block;
   width: 220px;
   margin: 0px 20px;
-  padding: 9px 0px;
+  padding: 12px 0px;
   font-size: 14px;
+  line-height: 1;
   color: #000000;
   text-align: center;
   text-transform: uppercase;
