--- a/css/style.css
+++ b/css/style.css
@@ -841,6 +841,7 @@ a {
 
 .product__purchase-buy {
   position: relative;
+  display: block;
   width: 135px;
   margin-bottom: 7px;
   padding: 11px 0px;
@@ -964,7 +965,7 @@ a {
 }
 
 .services {
-  height: 500px;
+  margin-bottom: 70px;
   padding-top: 36px;
   padding-bottom: 99px;
   background-color: #f4f8fa;
@@ -972,6 +973,7 @@ a {
 
 .services__title {
   margin: 0;
+  margin-bottom: 21px;
   font-size: 30px;
   font-weight: normal;
   text-transform: uppercase;
@@ -980,7 +982,6 @@ a {
 .services__subtitle {
   width: 400px;
   margin: 0;
-  margin-top: 19px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 1.8;
@@ -1017,7 +1018,7 @@ a {
   flex-direction: column;
   width: 240px;
   margin: 0;
-  margin-top: 72px;
+  margin-top: 70px;
 }
 
 .services__control::after {
@@ -1147,8 +1148,7 @@ a {
   display: -webkit-flex;
   display: flex;
   justify-content: space-between;
-  margin-top: 73px;
-  margin-bottom: 85px;
+  margin-bottom: 86px;
 }
 
 .about__us {
@@ -1203,7 +1203,7 @@ a {
   display: block;
   width: 220px;
   margin-top: 27px;
-  padding: 9px 0px;
+  padding: 8px 0px;
   font-size: 14px;
   color: #ffffff;
   text-align: center;
@@ -1247,9 +1247,10 @@ a {
 
 .about__contacts-write-us {
   position: relative;
+  display: block;
   width: 100%;
   margin-top: 32px;
-  padding: 10px 0px;
+  padding: 8px 0px;
   font-size: 14px;
   color: #ffffff;
   text-align: center;
@@ -2008,7 +2009,7 @@ a {
   content: "";
   background-image: url("../img/icons/checkbox-off.svg");
   background-repeat: no-repeat;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 
 .filters-product__choice:checked + .filters-product__manufacturers::before {
@@ -2024,7 +2025,14 @@ a {
   content: "";
   background-image: url("../img/icons/radio-off.svg");
   background-repeat: no-repeat;
-  opacity: 0.5;
+  opacity: 0.3;
+}
+
+.filters-product__manufacturers:hover::before,
+.filters-product__manufacturers:focus::before,
+.filters-product__type:hover::before,
+.filters-product__type:focus::before {
+  opacity: 0.4;
 }
 
 .filters-product__choice:checked + .filters-product__type::before {
@@ -2033,12 +2041,12 @@ a {
 
 .filters-product__choice:disabled + .filters-product__manufacturers,
 .filters-product__choice:disabled + .filters-product__type {
-  color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.2);
 }
 
 
 .filters-product__choice:disabled + .filters-product__manufacturers::before {
-  opacity: 0.3;
+  opacity: 0.1;
 }
 
 .filters-product__choice:disabled + .filters-product__type::before {
@@ -2104,6 +2112,7 @@ a {
   line-height: 1.3;
   text-transform: uppercase;
   border-bottom: 1px dotted #ee3643;
+  outline: none;
 }
 
 .sorting__link:hover,
@@ -2124,6 +2133,7 @@ a {
 .sorting__link-down {
   position: relative;
   display: block;
+  outline: none;
 }
 
 .sorting__link-up::after {
@@ -2287,6 +2297,7 @@ a {
   color: #000000;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
+  outline: none;
 }
 
 .page__link_active {
