--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,14 @@
 }
 
 html {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit;
 }
 
@@ -98,7 +100,6 @@ a {
 .container_flex {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
 }
 
@@ -106,14 +107,18 @@ a {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 220px;
   height: 42px;
   background-color: #ee3643;
   outline: none;
+  -webkit-box-shadow: 0 5px 0px #b52933;
   box-shadow: 0 5px 0px #b52933;
 }
 
@@ -129,7 +134,6 @@ a {
 .user-order {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
 }
 
@@ -280,7 +284,6 @@ a {
 .substrate .container_flex {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   height: 158px;
   padding: 47px 0px;
@@ -344,7 +347,6 @@ a {
 .user__navigation {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   margin: 0;
   padding: 0;
@@ -423,8 +425,8 @@ a {
 .main-navigation__list {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
   margin: 0;
   padding: 0;
@@ -453,8 +455,8 @@ a {
 .offers {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-top: 58px;
   margin-bottom: 53px;
@@ -678,7 +680,6 @@ a {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   bottom: 37px;
   left: 50%;
@@ -714,8 +715,9 @@ a {
 .wrapper-row {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 89px;
   margin-bottom: 20px;
@@ -760,9 +762,11 @@ a {
 .wrapper-product {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   text-align: center;
 }
@@ -807,7 +811,7 @@ a {
   margin: 0;
   margin-left: 42px;
   margin-top: 11px;
-  padding: 5px 5px 5px 15px ;
+  padding: 5px 5px 5px 15px;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   color: #fff;
@@ -830,8 +834,15 @@ a {
 .product__purchase {
   position: absolute;
   display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   top: 0;
   width: 218px;
@@ -850,6 +861,7 @@ a {
   color: rgba(255, 255, 255, 1);
   border: none;
   border-radius: 3px;
+  -webkit-box-shadow: inset 0px -3px 0 0 #367315;
   box-shadow: inset 0px -3px 0 0 #367315;
   background-color: #63a63e;
   cursor: pointer;
@@ -920,6 +932,7 @@ a {
 
 .product:hover,
 .product:focus {
+  -webkit-box-shadow: 0px 5px 25px 0 rgba(41, 52, 73, 0.5);
   box-shadow: 0px 5px 25px 0 rgba(41, 52, 73, 0.5)
 }
 
@@ -927,7 +940,6 @@ a {
 .product:focus .product__purchase {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
 }
 
@@ -938,9 +950,11 @@ a {
 .wrapper-manufacturers {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   margin-top: 20px;
 }
@@ -948,9 +962,12 @@ a {
 .manufacturers__link {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 220px;
   height: 145px;
@@ -961,6 +978,7 @@ a {
 
 .manufacturers__link:hover,
 .manufacturers__link:focus {
+  -webkit-box-shadow: 0px 5px 25px 0 rgba(41, 52, 73, 0.5);
   box-shadow: 0px 5px 25px 0 rgba(41, 52, 73, 0.5)
 }
 
@@ -990,8 +1008,8 @@ a {
 .wrapper-service {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  height: 256px;
 }
 
 .services__block {
@@ -1013,8 +1031,10 @@ a {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   width: 240px;
   margin: 0;
@@ -1040,18 +1060,24 @@ a {
   text-align: left;
   background-color: #32425c;
   border: none;
+  -webkit-box-shadow: 0px 1px 0 0 #293449,
+    inset 0px 1px 0 0 #405069;
   box-shadow: 0px 1px 0 0 #293449,
     inset 0px 1px 0 0 #405069;
   cursor: pointer;
   outline: none;
+  o
 }
 
 .services__control :first-child {
+  -webkit-box-shadow: 0px 1px 0 0 #ffffff,
+    inset 0px 1px 0 0 #ffffff;
   box-shadow: 0px 1px 0 0 #ffffff,
     inset 0px 1px 0 0 #ffffff;
 }
 
 .services__control :last-child {
+  -webkit-box-shadow: inset 0px 1px 0 0 #405069;
   box-shadow: inset 0px 1px 0 0 #405069;
 }
 
@@ -1079,10 +1105,12 @@ a {
 }
 
 .services__block-subtitle {
+  max-height: 150px;
   margin-top: 16px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 1.8;
+  overflow: hidden;
 }
 
 .services__block-delivery::after {
@@ -1145,8 +1173,9 @@ a {
 .about {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 87px;
 }
@@ -1282,6 +1311,7 @@ a {
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
+  -webkit-box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
   box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
 }
 
@@ -1325,18 +1355,26 @@ a {
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
+  -webkit-box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
   box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
 }
 
 .write-us_display {
   display: block;
+  -webkit-animation: bounce 0.6s;
+  animation: bounce 0.6s;
+}
+
+.write-us_error {
+  -webkit-animation: shake 0.6s;
+  animation: shake 0.6s;
 }
 
 .wrapper-answer {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   padding: 55px 80px 37px 80px;
 }
@@ -1429,7 +1467,6 @@ a {
 .footer__top {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   padding-bottom: 48px;
 }
@@ -1437,13 +1474,17 @@ a {
 .footer__top-logo-link {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 220px;
   height: 68px;
   background-color: #ee3643;
+  -webkit-box-shadow: inset 0 -5px 0px #b52933;
   box-shadow: inset 0 -5px 0px #b52933;
   cursor: pointer;
 }
@@ -1459,8 +1500,9 @@ a {
 .footer__top-navigation {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 548px;
   margin: 0;
@@ -1478,8 +1520,9 @@ a {
 .footer__bottom-navigation {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 525px;
   margin: 0;
@@ -1518,8 +1561,9 @@ a {
 .footer__bottom {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding-top: 38px;
   padding-bottom: 31px;
@@ -1537,7 +1581,6 @@ a {
 .footer__bottom-social {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   margin: 0;
   margin-left: 104px;
@@ -1660,8 +1703,8 @@ a {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 299px;
   margin: 0;
@@ -1743,9 +1786,9 @@ a {
 }
 
 .user__navigation-logged-in-link:hover::before,
-.user__navigation-logged-in-link:hover + .user__navigation-out-link::before,
+.user__navigation-logged-in-link:hover+.user__navigation-out-link::before,
 .user__navigation-logged-in-link:focus::before,
-.user__navigation-logged-in-link:focus + .user__navigation-out-link::before {
+.user__navigation-logged-in-link:focus+.user__navigation-out-link::before {
   opacity: 1;
 }
 
@@ -1754,7 +1797,7 @@ a {
 }
 
 .user__navigation-logged-in-link:active::before,
-.user__navigation-logged-in-link:active + .user__navigation-out-link::before {
+.user__navigation-logged-in-link:active+.user__navigation-out-link::before {
   opacity: 0.3;
 }
 
@@ -1773,14 +1816,12 @@ a {
 .wrapper-col {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
 }
 
 .breadcrumbs {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   margin: 20px 0px;
   padding: 0;
@@ -1835,11 +1876,11 @@ a {
 }
 
 .name-product__title {
-    margin: 0;
-    font-size: 30px;
-    font-weight: normal;
-    color: #32425c;
-    text-transform: uppercase;
+  margin: 0;
+  font-size: 30px;
+  font-weight: normal;
+  color: #32425c;
+  text-transform: uppercase;
 }
 
 .filters-product {
@@ -1902,6 +1943,7 @@ a {
   height: 20px;
   background-color: #ffffff;
   border-radius: 50%;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.3);
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -1935,8 +1977,9 @@ a {
 .filters-product__price-item {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   height: 38px;
 }
@@ -1966,8 +2009,10 @@ a {
 .filters-product__group {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin: 0;
   margin-top: 20px;
@@ -2012,7 +2057,7 @@ a {
   opacity: 0.3;
 }
 
-.filters-product__choice:checked + .filters-product__manufacturers::before {
+.filters-product__choice:checked+.filters-product__manufacturers::before {
   background-image: url("../img/icons/checkbox-on.svg");
 }
 
@@ -2035,21 +2080,21 @@ a {
   opacity: 0.4;
 }
 
-.filters-product__choice:checked + .filters-product__type::before {
+.filters-product__choice:checked+.filters-product__type::before {
   background-image: url("../img/icons/radio-on.svg");
 }
 
-.filters-product__choice:disabled + .filters-product__manufacturers,
-.filters-product__choice:disabled + .filters-product__type {
+.filters-product__choice:disabled+.filters-product__manufacturers,
+.filters-product__choice:disabled+.filters-product__type {
   color: rgba(0, 0, 0, 0.2);
 }
 
 
-.filters-product__choice:disabled + .filters-product__manufacturers::before {
+.filters-product__choice:disabled+.filters-product__manufacturers::before {
   opacity: 0.1;
 }
 
-.filters-product__choice:disabled + .filters-product__type::before {
+.filters-product__choice:disabled+.filters-product__type::before {
   opacity: 0.1;
 }
 
@@ -2072,7 +2117,6 @@ a {
 .sorting {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   margin-bottom: 20px;
   padding: 9px 9px 9px 19px;
@@ -2092,8 +2136,9 @@ a {
 .sorting__list {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%;
   margin: 0;
@@ -2190,6 +2235,7 @@ a {
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
+  -webkit-box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
   box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
 }
 
@@ -2221,7 +2267,8 @@ a {
 .popup-order__title::before {
   position: absolute;
   top: -10px;
-  left: -90px;;
+  left: -90px;
+  ;
   width: 66px;
   height: 66px;
   content: "";
@@ -2232,9 +2279,12 @@ a {
 .wrapper-popup-order__link {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 100%;
   height: 112px;
@@ -2272,12 +2322,13 @@ a {
 
 .popup-order_display {
   display: block;
+  -webkit-animation: bounce 0.6s;
+  animation: bounce 0.6s;
 }
 
 .page {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   margin-top: 30px;
 }
@@ -2285,9 +2336,12 @@ a {
 .page__link {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 38px;
   height: 38px;
@@ -2342,9 +2396,154 @@ a {
   text-transform: uppercase;
 }
 
-.about-product__subtitle  {
+.about-product__subtitle {
   margin-top: 19px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 1.9;
+}
+
+/* Анимация попапов */
+
+@-webkit-keyframes bounce {
+
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0, 0.61, 0.355, 1);
+  }
+
+  0% {
+    -webkit-transform: translate(-50%, -3000px);
+    -ms-transform: translate(-50%, -3000px);
+    transform: translate(-50%, -3000px);
+  }
+
+  60% {
+    -webkit-transform: translate(-50%, 25px);
+    -ms-transform: translate(-50%, 25px);
+    transform: translate(-50%, 25px);
+  }
+
+  75% {
+    -webkit-transform: translate(-50%, -10px);
+    -ms-transform: translate(-50%, -10px);
+    transform: translate3d(-50%, -10px);
+  }
+
+  90% {
+    -webkit-transform: translate(-50%, 5px);
+    -ms-transform: translate(-50%, 5px);
+    transform: translate(-50%, 5px);
+  }
+
+  to {
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+  }
+
+}
+
+@keyframes bounce {
+
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0, 0.61, 0.355, 1);
+  }
+
+  0% {
+    -webkit-transform: translate(-50%, -3000px);
+    -ms-transform: translate(-50%, -3000px);
+    transform: translate(-50%, -3000px);
+  }
+
+  60% {
+    -webkit-transform: translate(-50%, 25px);
+    -ms-transform: translate(-50%, 25px);
+    transform: translate(-50%, 25px);
+  }
+
+  75% {
+    -webkit-transform: translate(-50%, -10px);
+    -ms-transform: translate(-50%, -10px);
+    transform: translate3d(-50%, -10px);
+  }
+
+  90% {
+    -webkit-transform: translate(-50%, 5px);
+    -ms-transform: translate(-50%, 5px);
+    transform: translate(-50%, 5px);
+  }
+
+  to {
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+  }
+}
+
+@-webkit-keyframes shake {
+
+  from,
+  to {
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translate(-51%, 0);
+    -ms-transform: translate(-51%, 0);
+    transform: translate(-51%, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translate(-49%, 0);
+    -ms-transform: translate(-49%, 0);
+    transform: translate(-49%, 0);
+  }
+}
+
+@keyframes shake {
+
+  from,
+  to {
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translate(-51%, 0);
+    -ms-transform: translate(-51%, 0);
+    transform: translate(-51%, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translate(-49%, 0);
+    -ms-transform: translate(-49%, 0);
+    transform: translate(-49%, 0);
+  }
 }
