--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,8 @@ img {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -1515,7 +1516,8 @@ img {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 548px;
   margin: 0;
   padding: 0;
