--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ img {
   width: 17px;
   height: 17px;
   content: "";
-  background-image: url('../img/icons/icon-search.svg');
+  background-image: url("../img/icons/icon-search.svg");
   background-repeat: no-repeat;
   opacity: 0.3;
   -webkit-transform: translateY(-50%);
@@ -167,9 +167,44 @@ img {
   width: 270px;
   height: 42px;
   font-size: 17px;
+  font-weight: normal;
   background-color: #293449;
   border: none;
   outline: none;
+}
+
+.search__input::-webkit-input-placeholder {
+  color: #ffffff;
+}
+
+.search__input:-ms-input-placeholder {
+  color: #ffffff;
+}
+
+.search__input::-ms-input-placeholder {
+  color: #ffffff;
+}
+
+.search__input::placeholder {
+  color: #ffffff;
+}
+
+.search__input::-webkit-input-placeholder {
+  opacity: 1;
+  color: #ffffff;
+}
+
+.search__input::-moz-placeholder {
+  opacity: 1;
+  color: #ffffff;
+}
+
+.search__input:-ms-input-placeholder {
+  color: #ffffff;
+}
+
+.search__input::-ms-input-placeholder {
+  color: #ffffff;
 }
 
 .search__input:hover {
@@ -186,7 +221,7 @@ img {
 }
 
 .search__input:focus+.search__label::after {
-  background-image: url('../img/icons/icon-search-red.svg');
+  background-image: url("../img/icons/icon-search-red.svg");
 }
 
 .user-order__link {
@@ -211,7 +246,7 @@ img {
   width: 16px;
   height: 16px;
   content: "";
-  background-image: url('../img/icons/icon-bookmark.svg');
+  background-image: url("../img/icons/icon-bookmark.svg");
   background-repeat: no-repeat;
   opacity: 0.3;
   -webkit-transform: translateY(-50%);
@@ -226,7 +261,7 @@ img {
   width: 16px;
   height: 16px;
   content: "";
-  background-image: url('../img/icons/cart-icon.svg');
+  background-image: url("../img/icons/cart-icon.svg");
   background-repeat: no-repeat;
   opacity: 0.3;
   -webkit-transform: translateY(-50%);
@@ -290,8 +325,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 158px;
-  padding: 47px 0px;
+  padding: 46px 0px 40px;
 }
 
 .substrate {
@@ -300,17 +334,18 @@ img {
 }
 
 .description {
-  width: 210px;
+  width: 197px;
   margin: 0;
   margin-left: 53px;
   font-size: 16px;
   font-style: italic;
+  font-weight: normal;
   color: #ee3643;
 }
 
 .contacts {
   width: 270px;
-  margin-left: 58px;
+  margin-left: 70px;
   text-align: center;
 }
 
@@ -331,7 +366,7 @@ img {
   width: 19px;
   height: 19px;
   content: "";
-  background-image: url('../img/icons/icon-phone.svg');
+  background-image: url("../img/icons/icon-phone.svg");
   background-repeat: no-repeat;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -377,7 +412,7 @@ img {
   width: 20px;
   height: 17px;
   content: "";
-  background-image: url('../img/icons/icon-login.svg');
+  background-image: url("../img/icons/icon-login.svg");
   background-repeat: no-repeat;
   opacity: 0.3;
   -webkit-transform: translateY(-50%);
@@ -433,7 +468,7 @@ img {
   display: flex;
   -ms-flex-pack: distribute;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -901,7 +936,7 @@ img {
   width: 16px;
   height: 15px;
   content: "";
-  background-image: url('../img/icons/cart-icon.svg');
+  background-image: url("../img/icons/cart-icon.svg");
   background-repeat: no-repeat;
   opacity: 0.3;
   -webkit-transform: translateY(-50%);
@@ -1021,7 +1056,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 256px;
+  min-height: 256px;
 }
 
 .services__block {
@@ -1060,7 +1095,7 @@ img {
   width: 10px;
   height: 279px;
   content: "";
-  background-image: url('../img/img-slider/slider__service-after.png');
+  background-image: url("../img/img-slider/slider__service-after.png");
   background-repeat: no-repeat;
 }
 
@@ -1116,6 +1151,9 @@ img {
 }
 
 .services__block-subtitle {
+  position: relative;
+  z-index: 996;
+  margin: 0;
   margin-top: 16px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
@@ -1123,19 +1161,20 @@ img {
   overflow: hidden;
 }
 
+.services__block-subtitle_m {
+  margin-top: 0;
+}
+
 .services__block-delivery .services__block-subtitle {
-  max-width: 280px;
-  max-height: 90px;
+  max-width: 275px;
 }
 
 .services__block-guarantee .services__block-subtitle {
-  max-width: 380px;
-  max-height: 120px;
+  max-width: 379px;
 }
 
 .services__block-credit .services__block-subtitle {
-  max-width: 280px;
-  max-height: 90px;
+  max-width: 275px;
 }
 
 .services__block-delivery::after {
@@ -1145,7 +1184,7 @@ img {
   width: 468px;
   height: 261px;
   content: "";
-  background-image: url('../img/img-slider/slide__service-img1.png');
+  background-image: url("../img/img-slider/slide__service-img1.png");
   background-repeat: no-repeat;
 }
 
@@ -1156,7 +1195,7 @@ img {
   width: 389px;
   height: 283px;
   content: "";
-  background-image: url('../img/img-slider/slide__service-img2.png');
+  background-image: url("../img/img-slider/slide__service-img2.png");
   background-repeat: no-repeat;
 }
 
@@ -1167,7 +1206,7 @@ img {
   width: 465px;
   height: 285px;
   content: "";
-  background-image: url('../img/img-slider/slide__service-img3.png');
+  background-image: url("../img/img-slider/slide__service-img3.png");
   background-repeat: no-repeat;
 }
 
@@ -1224,6 +1263,7 @@ img {
 }
 
 .about__us-transportation {
+  width: 440px;
   margin-top: 26px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
@@ -1288,6 +1328,7 @@ img {
 }
 
 .about__contacts-pick-up {
+  width: 200px;
   margin-top: 20px;
   margin-bottom: 34px;
   font-family: "PT Sans", "Arial", sans-serif;
@@ -1519,6 +1560,7 @@ img {
 }
 
 .footer__top-address {
+  width: 324px;
   margin: 0;
   margin-top: 28px;
   margin-left: 5px;
@@ -1534,7 +1576,7 @@ img {
   -ms-flex-pack: justify;
   justify-content: space-between;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   width: 548px;
   margin: 0;
   padding: 0;
@@ -1586,6 +1628,7 @@ img {
 
 .footer__top-navigation-link:active,
 .footer__bottom-navigation-link:active {
+  text-decoration: none;
   opacity: 0.5;
 }
 
@@ -1601,6 +1644,7 @@ img {
 
 
 .footer__bottom-copyright {
+  width: 234px;
   margin: 0;
   font-size: 16px;
   color: #ffffff;
@@ -1612,6 +1656,12 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 130px;
   margin: 0;
   margin-left: 104px;
   padding: 0;
@@ -1623,14 +1673,10 @@ img {
   display: block;
   width: 40px;
   height: 40px;
+  margin-bottom: 5px;
   border-radius: 50%;
   background-color: #212a3a;
   outline: none;
-}
-
-.footer__bottom-social :nth-child(2) {
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .footer__bottom-social-vk::after {
@@ -1699,10 +1745,12 @@ img {
 }
 
 .footer__bottom-communication {
+  width: 136px;
   margin-left: 70px;
 }
 
 .footer__bottom-developed {
+  width: 100px;
   margin-right: 13px;
 }
 
@@ -1884,10 +1932,6 @@ img {
   background-repeat: no-repeat;
 }
 
-.breadcrumbs__link_mr::after {
-  right: -36px;
-}
-
 .breadcrumbs__trail::after {
   position: absolute;
   top: 3px;
@@ -1897,6 +1941,10 @@ img {
   content: "";
   background-image: url("../img/icons/icon-right-small.svg");
   background-repeat: no-repeat;
+}
+
+.breadcrumbs__link_mr::after {
+  right: -36px;
 }
 
 .name-product {
@@ -1979,7 +2027,6 @@ img {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   cursor: pointer;
-  outline: none;
 }
 
 .price-slider__control::after {
@@ -2023,10 +2070,6 @@ img {
   border: none;
   border-radius: 3px;
   outline: none;
-}
-
-.filters-product__choice {
-  display: none;
 }
 
 .separator {
@@ -2073,6 +2116,7 @@ img {
   font-size: 15px;
   text-transform: uppercase;
   cursor: pointer;
+  outline: none;
 }
 
 .filters-product__manufacturers::before {
@@ -2104,9 +2148,12 @@ img {
 }
 
 .filters-product__manufacturers:hover::before,
-.filters-product__manufacturers:focus::before,
-.filters-product__type:hover::before,
-.filters-product__type:focus::before {
+.filters-product__type:hover::before {
+  opacity: 0.4;
+}
+
+.filters-product__choice:focus+.filters-product__manufacturers:before,
+.filters-product__choice:focus+.filters-product__type:before {
   opacity: 0.4;
 }
 
