--- a/css/style.css
+++ b/css/style.css
@@ -1174,7 +1174,8 @@ img {
 }
 
 .services__block-credit .services__block-subtitle {
-  max-width: 275px;
+  max-width: 279px;
+  margin-bottom: 29px;
 }
 
 .services__block-delivery::after {
@@ -1214,7 +1215,6 @@ img {
   position: relative;
   display: block;
   width: 195px;
-  margin-top: 29px;
   padding: 9px 0px;
   font-size: 14px;
   color: #ffffff;
