--- a/css/style.css
+++ b/css/style.css
@@ -1557,6 +1557,7 @@ img {
   -webkit-box-shadow: inset 0 -5px 0px #b52933;
   box-shadow: inset 0 -5px 0px #b52933;
   cursor: pointer;
+  outline: none;
 }
 
 .footer__top-address {
